[package]
name = "ws_bridge_rs"
version = "0.1.0"
authors = ["Ivor Wanders <ivor@iwanders.net>"]
edition = "2021"
license = "MIT OR Apache-2.0"


[dependencies]
clap = "2.33.3"
tokio-tungstenite = { version = "0.16.0", features = ["native-tls"] }
tokio = { version = "1.14.0", features = ["rt", "net", "rt-multi-thread", "io-util", "sync", "macros"] }
warp = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
log = "0.4"
env_logger = "0.9.0"

[profile.release]
opt-level = 3
